# mexc_transfer

./: .gitignore  README.md  currency_network_history.txt  currency_network_info.txt  etherscan_test_05_saveDataInMysql.py  getnetwork.py  getnetwork_history.py  mexc.py  pyproject.toml  signature_test01.py  simple_SaveTheBalanceOfEtherscanLatestAddressInMysql.py  simple_transfer.py  table.sql  test2.py  test3_base.py  test_etherscan_test_01.py  test_etherscan_test_02.py  test_etherscan_test_04_latest_trans copy.py  test_etherscan_test_04_latest_trans.py  test_etherscan_test_07_saveAddress.py  test_etherscan_test_08_getdata_from_mysql.py  test_simple_transfer001.py
